--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 #indicator {
   height: 20vh;
   width: 100%;
@@ -13,25 +17,134 @@ body.program {
 
 body {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     height: 100vh;
     margin: 0;
+    font-family: sans-serif;
 }
 
 .status {
     font-size: 8vw;
-    font-family: sans-serif;
     /* background: rgba(255, 255, 255, 0.55); */
     padding: 5vh;
     /* text-shadow: 3px 1px 3px; */
-    color: white;
 }
 
 body {
-    background: #444;
 }
 
 body.preview {
     background: #006500;
+}
+.help {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  width: 60vw;
+  height: 100px;
+}
+.cameraNumbers, .cameraHelp {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  box-sizing: border-box;
+}
+.cameraNum {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.cameraHelp {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.helpMessage {
+  background: #555;
+  padding: 10px;
+}
+.fa-question {
+  font-size: 20vw;
+}
+
+
+.container {
+    height: 100%;
+    width: 100%;
+}
+
+.appContainer {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.header {
+    display: flex;
+    color: #F5F5F5;
+    background: #444;
+    font-size: 9vw;
+    height: 12vw;
+    align-items: center;
+    z-index: 23;
+}
+
+@media (min-width: 500px) {
+  .header {
+      font-size: 40px;
+      height: 70px;
+  }
+}
+
+.header > div {
+    display: flex;
+    width: 50%;
+    justify-content: center;
+}
+
+
+.typeBox {
+    width: 100%;
+    font-size: 17px;
+}
+
+
+.chat {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+}
+
+.msgs__msgc {
+    display: flex;
+    font-size: 19px;
+    padding: 6px;
+}
+
+.msgs__msgc:nth-child(odd) {
+  background: #e0e0e0;
+}
+
+.msgs__id {
+    font-weight: bold;
+    margin-right: 15px;
+}
+
+
+.msgs {
+    flex-grow: 1;
+    position: relative;
+}
+
+.msgs__inner {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    max-height: 100%;
+    overflow-y: auto;
 }
