--- a/public/styles.css
+++ b/public/styles.css
@@ -11,9 +11,7 @@
 }
 
 
-body.program {
-    background-color: rgba(189,0,0,0.5);
-}
+
 
 body {
     display: flex;
@@ -33,10 +31,6 @@ body {
 }
 
 body {
-}
-
-body.preview {
-    background: #006500;
 }
 .help {
   display: flex;
@@ -88,17 +82,16 @@ body.preview {
     display: flex;
     color: #F5F5F5;
     background: #444;
-    font-size: 9vw;
+    font-size: 5vw;
     height: 12vw;
     align-items: center;
     z-index: 23;
-}
-
-@media (min-width: 500px) {
-  .header {
-      font-size: 40px;
-      height: 70px;
-  }
+    position: fixed;
+    right: 0;
+    left: 0;
+    top: 0;
+    cursor: pointer;
+    user-select: none;
 }
 
 .header > div {
@@ -115,6 +108,7 @@ body.preview {
 
 
 .chat {
+    margin-top: 12vw;
     display: flex;
     flex-direction: column;
     flex-grow: 1;
@@ -147,4 +141,36 @@ body.preview {
     width: 100%;
     max-height: 100%;
     overflow-y: auto;
+}
+
+
+.header.preview {
+    background: #006500;
+}
+.header.program {
+    background-color: rgb(169, 1, 1);
+}
+
+
+.header.full {
+    bottom: 0;
+    height: auto!important;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 10vw;
+}
+
+@media (min-width: 710px) {
+  .header {
+      font-size: 40px;
+      height: 70px;
+  }
+  .chat {
+    margin-top: 70px;
+  }
+}
+
+
+.header.full > div {
+    width: 100%;
 }
